added info to index page

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -5,6 +5,26 @@ todo: add initial page echoing app description, with list of pages to follow. Al
 todo: state that tutorial pages are starting points, bulk of documentation is inline in files linked from tutorial pages
 -->
 
+<div>
+<h2>Introduction</h2>
+
+This project is an implementation of the redis-based twitter clone described in <a href="http://redis.io/topics/twitter-clone">this case study</a>
+<br>
+<br>
+<p>
+"In this article I'll describe the design and implementation of a simple clone of Twitter written using PHP with Redis as the only database. The programming community has traditionally considered key-value stores as a special purpose database that couldn't be used as a drop in replacement for a relational database for the development of web applications. This article will try to correct this impression.
+Our Twitter clone, called Retwis, is structurally simple, has very good performance, and can be distributed among any number of web and Redis servers with very little effort. You can find the source code here."
+</p>
+<br>
+<br>
+
+I encourage you to read the above case study, which describes the redis schema used in detail.
+The following tutorial pages contain links to the major components of this app, with short descriptions of their role.
+The bulk of the documentation is inline, in the form of comments.
+
+</div>
+
+
 
 <div>
 <h2>Main page</h2>
